--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=root
+DB_PASS=root
 DB_NAME=gusstop
+BOT_TOKEN=6372079405:AAFrj3UEHr-yaYy32mtyhForfO1TyTaBdpE
+COMMITTEES='["КДК", "СПОК", "ЦВК", "КЛЮКВА", "КОТ", "ИЦ"]'
+ADMIN_IDS='[974923385]'
+MEMBERS_LOAD_LIMIT=2
