--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+secrets/
 build/
 develop-eggs/
 dist/
@@ -160,3 +161,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+!/.env
+!/.env
