edit .evn and config_reader.py

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=root
-DB_NAME=gusstop
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
+POSTGRES_DB=gusstop
 BOT_TOKEN=6372079405:AAFrj3UEHr-yaYy32mtyhForfO1TyTaBdpE
 VK_TOKEN=vk1.a.7yikS2-yzeSU-jiQJeou99PQgZX2uwvJw8Zadn7Oj5arQIsa5Gr4BYwD4A-xXPLCm-aSwIBDQYHCgR55lkpV1BqCGRXOASFLLGcC2D2rf6LGi_FXyRkihlizBVRDU0mEdMd1RmUBL-ygROvPUGfS3rdNujnjlRA6EtP-EKlHM8e0KfnXPa122Uc1SEtaOXRatNBbdt4RMbgAVMqspPoAmw
 ADMIN_IDS='[974923385, 1010675645]'
