--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-POSTGRES_HOST=localhost
+POSTGRES_HOST=88.218.170.161
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=root
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
 POSTGRES_DB=gusstop
 BOT_TOKEN=6372079405:AAFrj3UEHr-yaYy32mtyhForfO1TyTaBdpE
 VK_TOKEN=vk1.a.7yikS2-yzeSU-jiQJeou99PQgZX2uwvJw8Zadn7Oj5arQIsa5Gr4BYwD4A-xXPLCm-aSwIBDQYHCgR55lkpV1BqCGRXOASFLLGcC2D2rf6LGi_FXyRkihlizBVRDU0mEdMd1RmUBL-ygROvPUGfS3rdNujnjlRA6EtP-EKlHM8e0KfnXPa122Uc1SEtaOXRatNBbdt4RMbgAVMqspPoAmw
