--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     env_file:
       - ./.env
     volumes:
-      - pgdata:var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     restart: on-failure
     ports:
       - '5432:5432'
   bot:
     build: .
-    command: sh -c "alembic upgrade head python -m src/main.py"
+    command: sh -c "alembic upgrade head && python -m src/main.py"
     env_file:
       - ./.env
     depends_on:
