--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - '5432:5432'
   bot:
     build: .
-    command: sh -c "alembic upgrade head && python -m src/main"
+    command: sh -c "alembic upgrade head && python -m src.main"
     env_file:
       - ./.env
     depends_on:
